add background image to login page. test different css styling.

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -19,9 +19,15 @@
 
 }
 
-#tenantableLogo {
-}
+
+
+/* #tenantableLogo {
+    background-color: green;
+    this can be improved 
+} */
 
 #navBarLinks {
+    font-family: 'Lobster', cursive;
+
 
 }
