fix bugs with npm start issues.

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -28,6 +28,9 @@
 
 #navBarLinks {
     font-family: 'Lobster', cursive;
+}
 
-
+a:link {
+  cursor: pointer;
+  /* this changes to a hand on hover */
 }
