add rough draft styling with colors. move ticker to the bottom of faq screen. create a tenant component to render all tenants.

--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -42,3 +42,8 @@ registerForm {
     height: 100vh;
     z-index: -10;
 }
+
+#create-account-button {
+    background: linear-gradient(to right, #4ac29a , #bdfff3);
+    color: black;
+}
