--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -1,3 +1,8 @@
+body {
+    background: linear-gradient(to right, #4ac29a , #bdfff3);
+}
+
+
 .tenantableLogo {
     width: 307px;
     height: 48px;
