--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -40,7 +40,7 @@ registerForm {
     top: 0;
     bottom: 0;
     height: 100vh;
-    z-index: -10;
+    /* z-index: -10; */
 }
 
 #create-account-button {
