--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -19,6 +19,10 @@
     /* z-index: -10; */
 }
 
+.usernameMessage {
+    color: red;
+}
+
 #login-button {
     background: linear-gradient(to right, #4ac29a , #bdfff3);
 }
