add more error handling verification on username length requirements on registration page.

--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -43,6 +43,10 @@ registerForm {
     /* z-index: -10; */
 }
 
+.usernameMessage {
+    color: red;
+}
+
 #create-account-button {
     background: linear-gradient(to right, #4ac29a , #bdfff3);
     color: black;
