--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,16 @@
   font-size: large;
 }
 
+h1, h2 {
+  font-family: 'Dancing Script', cursive;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+p {
+  font-size: 25px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
